syntax = "proto3";
package kompics.benchmarks;

import "messages.proto";

service BenchmarkRunner {
	rpc PingPong (PingPongRequest) returns (TestResult) {}
}

message PingPongRequest {
	uint64 number_of_messages = 1;
}